# c-tls_demo

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  ast_tls_cert.sh  basic.sh  cmds.txt  config.cnf  create_cert.py  docker-compose.yml  docker_run.sh  docker_start.sh  docker_stop.sh  generate_crt.sh  generate_csr.sh  generate_csr_basic.sh  generate_csr_conf.sh  generate_diffie_hellman_params.sh  generate_key_cert_combo.sh  generate_private_key.sh  generate_root_directories.sh  generate_self_signed.sh  get_server_cert.sh  list_open_listening_sockets.sh  notes.txt  read_crt.sh  read_diffie_hellman_params.sh  read_self_signed.sh  server_asteriskwildcard-cyberdata-net.cnf  sign_csr.sh  test_server.sh  test_ssl_server.sh  todo.txt  tools  tst  verify_cert.sh  verify_crt.sh  verify_csr.sh  verify_diffie_hellman_params.sh  verify_key.sh  (+1 more)
certs/: generate_intermediate_ca_crt.sh  generate_intermediate_ca_csr.sh  generate_server_cert_chain.sh  generate_server_csr.sh  notes.txt  prep.sh  sign_intermediate_ca.sh  sign_root_ca.sh
certs_old/: generate_cert_chain.sh  generate_intermediate_ca_csr.sh  prep.sh  sign_root_ca.sh  sign_server_csr.sh
config/: ca.cnf  ca2.cnf  client.cnf  client_ip.cnf  client_unencrypted_key.cnf  sample.cnf  server.cnf  server2_localhost.cnf  server_asterisk34-cyberdata-net.cnf  server_asterisk34.cnf  server_asteriskwildcard-cyberdata-net.cnf  server_batch.cnf  server_ip.cnf  server_unencrytped_key.cnf  server_wildcard-cyberdata-net.cnf
config2/: client2_localhost.cnf
src/demo/: CMakeLists.txt  cdssl.c  cdssl.h  ssl_client.c  ssl_server.c
(+172 files in other folders)
