add_executable(ssl_server
    ssl_server.c
    cdssl.h
    cdssl.c
)
target_link_libraries(ssl_server
    PRIVATE
        OpenSSL::SSL
        OpenSSL::Crypto
)
add_executable(ssl_client
    ssl_client.c
    cdssl.h
    cdssl.c
)
target_link_libraries(ssl_client
    PRIVATE
        OpenSSL::SSL
        OpenSSL::Crypto
)
